--- a/react/pages/src/css/utils/templates.css
+++ b/react/pages/src/css/utils/templates.css
@@ -15,6 +15,7 @@
     margin: 0 auto;
     width: 1340px;
     padding: 0 40px;
+    color: black;
 }
 
 /** Header */
@@ -22,9 +23,12 @@
     width: 100%;
     position: sticky;
     margin: 0;
+    top: 0;
+    left: 0;
+    right: 0;
     backdrop-filter: blur(40px);
     box-shadow: 0 25px 30px rgba(0, 0, 0, 0.05);
-    color: black;
+    color: white;
     border-bottom: 2px solid #0000b3;
     background: black;
 }
@@ -39,13 +43,14 @@
 }
 
 .header-util-center > div {
-    width: 150px;
+    width: 300px;
     font-size: 20px;
 }
 
 /** Footer */
 .footer-util {
     width: 100%;
+    background: #737373;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -65,4 +70,3 @@
 }
 
 /** SideBar */
-
