Container & icon util upgrade

--- a/react/pages/src/css/utils/IconUtil.css
+++ b/react/pages/src/css/utils/IconUtil.css
@@ -2,6 +2,7 @@
     width: 80px;
     height: 80px;
     margin: 0 8px;
+    background: black;
 }
 
 .icon-img-util > div .icon-img-util-img-classic{
