--- a/react/pages/src/css/utils/SectionUtil.css
+++ b/react/pages/src/css/utils/SectionUtil.css
@@ -1,17 +1,21 @@
 .section-util-section-all {
     width: 100%;
     display: block;
-    margin: 120px 0;
-    background: #F6F6FC;
-    padding: 120px 0;
+    background: white;
+    padding: 80px 0;
     text-align: center;
-    +vp-width-le(860px);
+    /**+vp-width-le(860px);
         margin: 80px 0;
-        padding: 40px 0;
+        padding: 40px 0;*/
 }
 .section-util-section-all:nth-child(2n){
-    background: white;
+    background: #F5F5F9;
 }
+.section-util-section-all > h1{
+    font-size: 40px;
+    margin: 0 0 30px;
+}
+
 .section-util-section-mid-div {
     width: 1340px;
     padding: 0 50px;
@@ -21,7 +25,7 @@
 .section-util-mid-div-grid {
     max-width: 1440px;
     display: grid;
-    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     grid-template-rows: auto;
     grid-gap: 50px;
     margin: 0 auto;
