--- a/react/pages/src/css/utils/container-util.css
+++ b/react/pages/src/css/utils/container-util.css
@@ -26,7 +26,6 @@
     align-items: center;
     flex-direction: column;
     color: white;
-    background: blue;
     margin: 0 auto;
 }
 
@@ -42,6 +41,17 @@
 
 .container-util-mode-boxes-picture-all {
     height: 85%;
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+}
+
+.container-util-mode-boxes-picture-text {
+    background: black;
+    vertical-align: middle;
+    text-align: center;
+    height: 100%;
+    font-size: 36px;
+    border-radius: 20px 20px 0 0;
 }
 
 .container-util-mode-boxes-text-all {
@@ -60,4 +70,30 @@
     text-decoration: none;
     text-align: center;
     vertical-align: middle;
+}
+
+/** Mode element */
+.container-util-mode-element {
+    background: black;
+    height: 180px;
+    width: 270px;
+    font-size: 30px;
+    text-decoration: none;
+    border-radius: 15px;
+    border: 2px solid #ec1c24;
+    margin: 0 auto;
+}
+.container-util-mode-element > a {
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+.container-util-mode-element > a > p {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    flex: 1;
 }
